modified folder structure separate Source, Analysis

--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,9 @@
 .ipynb_checkpoints/
 __pycache__/
 '=0.3.3'
-data-*
-Till_Data/
-*.xlsx
-20*.csv
-tpot*
-Example1*
-VLB120_*
-XHost_*
-config_XHostAvg.txt
+Analysis/data-*
+Analysis/XHost_*
 config_Spacer.txt
-confit_snth.txt
 build/
 dist/
 Exp2Ipynb.egg-info/
